--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,16 @@ h6 {
   --bs-btn-hover-border-color: #2899b2;
 }
 
+/* .btn-update:disabled,
+.btn-new-task:disabled {
+  --bs-btn-color: #808080;
+  --bs-btn-bg: #f0f0f0;
+  --bs-btn-border-color: #d9d9d9;
+  --bs-btn-hover-color: #808080;
+  --bs-btn-hover-bg: #f0f0f0;
+  --bs-btn-hover-border-color: #d9d9d9;
+} */
+
 .form-control.is-valid {
   background-image: url("/images/valid.png");
   background-size: calc(1em + 0.375rem) calc(1em + 0.375rem);
@@ -214,8 +224,4 @@ section .task .category {
 
 .task ul i {
   cursor: pointer;
-}
-
-.my-modal {
-  z-index: 9999999;
 }
