--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,6 +1,6 @@
 @if (isVisible) {
 <div
-  class="my-modal bg-black bg-opacity-75 position-absolute start-0 top-0 end-0 bottom-0 d-flex justify-content-center align-items-center"
+  class="my-modal bg-black bg-opacity-75 position-fixed w-100 h-100 start-0 top-0 end-0 bottom-0 d-flex justify-content-center align-items-center"
   id="modal"
   (click)="handleOverlayClick()"
 >
@@ -41,7 +41,7 @@
       <p class="text-end">
         <span id="remainingCounter">100</span> remaining character
       </p>
-      @if (!isEditEnabled()) {
+      @if (!noteToEdit) {
       <button
         [disabled]="modalForm.invalid"
         class="btn d-block btn-new-task w-100 fw-semibold"
@@ -53,7 +53,7 @@
       }@else {
       <button
         [disabled]="modalForm.invalid"
-        class="btn d-none btn-primary w-100 fw-semibold"
+        class="btn btn-primary w-100 fw-semibold"
         id="updateBtn"
         (click)="updateNote()"
       >
