--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -2,14 +2,6 @@ header {
   background-color: var(--sec-black);
 }
 
-header h1 {
-  font-family: "Lobster", cursive;
-  cursor: pointer;
-}
-header h1 a {
-  color: inherit;
-}
-
-header h1 a:hover {
-  color: inherit;
+h1 {
+  color: #fff !important;
 }
