--- a/src/app/pages/notes/notes.component.html
+++ b/src/app/pages/notes/notes.component.html
@@ -70,7 +70,7 @@
                   <li>
                     <i
                       class="fa-solid fa-palette"
-                      (click)="changeTaskBackground($index)"
+                      (click)="changeTaskBackground($index, 'notes')"
                     ></i>
                   </li>
                 </ul>
@@ -118,7 +118,7 @@
                   <li>
                     <i
                       class="fa-solid fa-palette"
-                      (click)="changeTaskBackground($index)"
+                      (click)="changeTaskBackground($index, 'inProgress')"
                     ></i>
                   </li>
                 </ul>
@@ -166,7 +166,7 @@
                   <li>
                     <i
                       class="fa-solid fa-palette"
-                      (click)="changeTaskBackground($index)"
+                      (click)="changeTaskBackground($index, 'done')"
                     ></i>
                   </li>
                 </ul>
