--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,26 @@
-<p>not-found works!</p>
+<section class="page_404 bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="text-center">
+          <div class="four_zero_four_bg">
+            <h1 class="text-center">404</h1>
+          </div>
+          <div class="contant_box_404">
+            <h2 class="h2">Look like you're lost</h2>
+
+            <h3 class="text-capitalize">
+              the page you are looking for not avaible!
+            </h3>
+
+            <a
+              routerLink="/notes"
+              class="link_404 btn bg-main text-capitalize fw-medium"
+              >back to Home</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
